@@ -4,6 +4,7 @@ missing_type        "Type requires a value."
 missing_title       "Title requires a value."
 missing_slug        "Slug requires a value for this story type because it is used to construct the URL."
 missing_category    "Site / Category requires a value."
+bad_category        "Invalid Site / Category. $explanation"
 missing_cover_date  "Cover Date requires values for date (MM/DD/YYYY) and time (HH:MM PM)."
 no_slug_no_cat_idx  "Story must either have a Slug or be a Category Index."
 
